examples/test/testpolicy16936.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16936
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key2: value35
      key32: value35
      key9: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value10
      podSelector:
        matchLabels:
          key18: value46
          key19: value6
          key41: value45
